# Floppotron-Jr

./: .gitignore  .gitmodules  flake.nix  shell.nix
case/: case.scad
firmware/: Cargo.toml  Makefile  floppotron.code-workspace  openocd.gdb
firmware-c/: CMakeLists.txt  Makefile  btstack_config.h  cvOutput.c  cvOutput.h  dispatcher.c  dispatcher.h  envelope.c  envelope.h  floppy.c  floppy.h  genNoteDict.py  led.c  led.h  main.c  midi-ble.gatt  midi.c  midi.h  midi_ble.c  midi_ble.h  noteDict.h  noteStack.c  noteStack.h  oscillator.c  oscillator.h  ring_buffer_lib_config.h
firmware/.cargo/: config.toml
firmware/notedict/: Cargo.toml
firmware/notedict/src/: lib.rs
firmware/openocd/: with_picoprobe.nix
firmware/src/: floppy.rs  lib.rs  main.rs  note_dict.rs  oscillators.rs
firmware/src/oscillators/: inverse.rs  single.rs  unisono.rs
pcb/RP_Silicon_KiCad/KiCadLibraries/: MCU_RaspberryPi_and_Boards.lib
pcb/RP_Silicon_KiCad/KiCadLibraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
pcb/floppotron/: floppotron-cache.lib  floppotron.kicad_pcb  floppotron.kicad_pro  floppotron.kicad_sch  floppotron.pro  floppotron.sch  fp-lib-table  piezo_amp.kicad_sch  sym-lib-table
pcb/kosmo-interface/: fp-lib-table  kosmo-interface.kicad_pcb  kosmo-interface.kicad_pro  kosmo-interface.kicad_sch  sym-lib-table
